<resources>
    <string name="app_name">SPK</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="nasabah">Nasabah</string>
    <string name="perangkingan">Perangkingan</string>
    <string name="Data_Nasabah">Data Nasabah</string>
    <string name="tambah_data">Tambah Data Nasabah</string>
    <string name="lihat_data_nasabah">Lihat Data Nasabah</string>
    <string name="tambah_data_nasabah">Tambah Data Nasabah</string>
    <string name="nama_nasabah">Nama Nasabah</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="no_hp">No HP</string>
    <string name="gaji">Gaji</string>
    <string name="gaji_hint">Contoh: 3500000</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="bpkb">Tahun BPKB Jaminan</string>
    <string name="bpkb_hint">Contoh: 2018</string>
    <string name="input_data">Input Data</string>
    <string name="menu_nasabah">Menu Nasabah</string>
    <string name="nama">Nama</string>
    <string name="no">No</string>
    <string name="bobot_gaji">Bobot Gaji</string>
    <string name="bobot_pengeluaran">Bobot Pengeluaran</string>
    <string name="bobot_bpkb">Bobot Tahun BPKB</string>
    <string name="bobot_total">Bobot Total</string>
    <string name="rangking">No. Rangking</string>
    <string name="detail_perhitungan_bobot">Detail Perhitungan Bobot</string>
    <string name="nilai_bobot_kriteria">Nilai Bobot Kriteria</string>
    <string name="bobot_faktor_gaji">Bobot Faktor Gaji: </string>
    <string name="nilai_bobot_faktor_gaji">0.5</string>
    <string name="bobot_faktor_pengeluaran">Bobot Faktor Pengeluaran: </string>
    <string name="nilai_bobot_faktor_pengeluaran">0.3</string>
    <string name="bobot_faktor_bpkp">Bobot Faktor BPKB</string>
    <string name="nilai_bobot_faktor_bpkb">0.2</string>
    <string name="nilai_kriteria_gaji">Nilai Kriteria Gaji</string>
    <string name="rp0_rp1_000_000">Rp0 - Rp1.000.000</string>
    <string name="rp1_000_001_rp2_000_000">Rp1.000.001 - Rp2.000.000</string>
    <string name="rp2_000_001_rp3_000_000">Rp2.000.001 - Rp3.000.000</string>
    <string name="rp3_000_001_rp4_000_000">Rp3.000.001 - Rp4.000.000</string>
    <string name="rp4_000_001_rp5_000_000">Rp4.000.001 - Rp5.000.000</string>
    <string name="rp5_000_001_rp10_000_000">Rp5.000.001 - Rp10.000.000</string>
    <string name="rp10_000_001"><![CDATA[>= Rp10.000.001]]></string>
    <string name="nilai_kriteria_penghasilan">Nilai Kriteria Penghasilan</string>
    <string name="nilai_kriteria_tahun_bpkb">Nilai Kriteria Tahun BPKB</string>
    <string name="_2007"><![CDATA[<= 2007]]></string>
    <string name="_2008_2013">2008 – 2013</string>
    <string name="_2014_2018">2014 – 2018</string>
    <string name="pembobotan_kriteria">Pembobotan Kriteria</string>
    <string name="nilai_bobot">Nilai Bobot</string>
    <string name="nilai_total_bobot">Nilai Total Bobot</string>
    <string name="total_bobot">Total Bobot</string>
    <string name="login_form">Login Form</string>
    <string name="enter_username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="cancel">Cancel</string>
</resources>
